--- a/Shq/UI-Library/src/index.html
+++ b/Shq/UI-Library/src/index.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
-        body, html {
+        body,
+        html {
             height: 100vh;
             width: 100vw;
 
@@ -24,17 +25,15 @@
             align-items: center;
         }
 
-        body > div {
+        body>div {
             padding-top: 10px;
             width: 80%;
         }
-
     </style>
 </head>
 
 <body>
-
-    <div class="absolute max-w-4xl mt-2 p-4 bg-white border rounded-2xl border-gray-200 rounded-lg dark:bg-gray-800 dark:border-gray-700">
+    <div class="absolute max-w-4xl cursor-default mt-2 p-4 bg-white border border-gray-200 rounded-xl dark:bg-gray-800 dark:border-gray-700">
         <form>
             <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
             <div class="relative">
@@ -47,8 +46,37 @@
                 <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700">Search</button>
             </div>
         </form>
-    </div>
+        <div class="mt-4">
+            <p class="mb-2 font-semibold text-gray-900 dark:text-white px-2">History</p>
+            <ul class="space-y-1 text-gray-500 list-inside dark:text-gray-400 w-[100%]">
+                <li class="flex items-center">
+                    <a href="#" class="inline-flex items-center justify-center py-2 px-4 gap-3 w-[100%] text-base font-medium text-gray-500 rounded-lg bg-gray-50 hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 dark:hover:text-white">
+                        <svg class="w-3.5 h-3.5 me-2 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                        </svg>
+                        <span class="w-full">At least 10 characters</span>
+                    </a> 
+                </li>
+                <li class="flex items-center">
+                    <a href="#" class="inline-flex items-center justify-center py-2 px-4 gap-3 w-[100%] text-base font-medium text-gray-500 rounded-lg bg-gray-50 hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 dark:hover:text-white">
+                        <svg class="w-3.5 h-3.5 me-2 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                        </svg>
+                        <span class="w-full">At least one lowercase character</span>
+                    </a> 
+                </li>
+                <li class="flex items-center">
+                    <a href="#" class="inline-flex items-center justify-center py-2 px-4 gap-3 w-[100%] text-base font-medium text-gray-500 rounded-lg bg-gray-50 hover:text-gray-900 hover:bg-gray-100 dark:text-gray-400 dark:bg-gray-800 dark:hover:bg-gray-700 dark:hover:text-white">
+                        <svg class="w-3.5 h-3.5 me-2 flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
+                        </svg>
+                        <span class="w-full">At least one special character, e.g., ! @ # ?</span>
+                    </a> 
+                </li>
+            </ul>
 
+        </div>
+    </div>
 </body>
 
 </html>
